Homework is ready for validation

--- a/module-10/css/style.css
+++ b/module-10/css/style.css
@@ -1,583 +1,13 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
-
-html {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-*,
-::before,
-::after {
-    -webkit-box-sizing: inherit;
-            box-sizing: inherit;
-}
-
-body {
-    font-size: 15px;
-    line-height: 1.2;
-    font-family: 'Roboto', 'Montserrat', 'Kaushan Script', sans-serif;
-    color: rgb(153, 153, 153);
-    margin: 0px;
-    padding: 0px;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-.container {
-    width: 1200px;
-    margin: 0px auto;
-    text-align: center;
-}
-
-/* header */
-
-.header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    min-height: 1000px;
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), url('../img/bgr.png');
-    background-image: -o-linear-gradient(bottom, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../img/bgr.png');
-    background-image: linear-gradient(0deg, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../img/bgr.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-@media (-webkit-min-device-pixel-ratio: 2),
-(-o-min-device-pixel-ratio: 2/1),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .header {
-        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), url('../img/bgr@2x.png') no-repeat;
-        background-image: -o-linear-gradient(bottom, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../img/bgr@2x.png') no-repeat;
-        background-image: linear-gradient(0deg, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../img/bgr@2x.png') no-repeat;
-    }
-}
-
-.header__navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding-top: 26px;
-    margin-bottom: 174px;
-}
-
-.navigation__list {
-    text-transform: uppercase;
-}
-
-.navigation__item:not(:nth-child(7n)) {
-    margin-right: 52px;
-}
-
-.navigation__item {
-    position: relative;
-}
-
-.navigation__link {
-    font-size: 14px;
-}
-
-.navigation__icon {
-    fill: rgb(255, 255, 255);
-}
-
-.navigation__link::after {
-    position: absolute;
-    content: '';
-    width: 0;
-    height: 3px;
-    background: rgb(252, 227, 138);
-    bottom: -12px;
-    left: 50%;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.navigation__link:hover::after,
-.navigation__link:focus::after {
-    width: 100%;
-    left: 0;
-}
-
-.navigation__link:hover,
-.navigation__link:focus {
-    color: rgb(252, 227, 138);
-}
-
-.site-logo:hover,
-.site-logo:focus {
-    -webkit-box-shadow: 2px 2px 10px 2px rgb(252, 227, 138);
-            box-shadow: 2px 2px 10px 2px rgb(252, 227, 138);
-}
-
-.navigation__icon:hover,
-.navigation__icon:focus {
-    fill: rgb(252, 227, 138);
-}
-
-.header__content {
-    padding: 0px 190px;
-    margin-bottom: 230px;
-}
-
-.header__slogan {
-    display: block;
-    font-size: 72px;
-    margin-bottom: 22px;
-}
-
-.header__title {
-    font-size: 150px;
-    line-height: 1;
-    margin: 0px 0px 98px;
-}
-
-.header__button {
-    font-size: 14px;
-    padding: 10px 28px;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.btn--lighter:hover,
-.btn--lighter:hover {
-    color: rgb(252, 227, 138);
-    border-color: rgb(252, 227, 138);
-}
-
-.wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-}
-
-.list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-}
-
-.item {
-    cursor: pointer;
-}
-
-.link {
-    text-decoration: none;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.typographic-mr {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-}
-
-.typographic-mb {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    text-align: center;
-}
-
-.typographic-rr {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-}
-
-.typographic-ri {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-style: italic;
-}
-
-.typographic-kr {
-    font-family: "Kaushan Script", sans-serif;
-    font-weight: 400;
-    text-align: center;
-}
-
-.text-ligth {
-    color: rgb(255, 255, 255);
-}
-
-.text-grey {
-    color: rgb(153, 153, 153);
-}
-
-.text-dark {
-    color: rgb(51, 51, 51);
-}
-
-.icon {
-    display: block;
-}
-
-.title {
-    text-transform: uppercase;
-}
-
-.button {
-    text-transform: uppercase;
-    cursor: pointer;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.btn--light {
-    color: rgb(255, 255, 255);
-    background-color: rgb(149, 225, 211);
-}
-
-.btn--lighter {
-    color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0);
-    border: 3px solid rgb(255, 255, 255);
-}
-
-/* main */
-
-/* Amazing Services */
-
-.section__wrapper {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-top: 46px;
-}
-
-.section__slogan {
-    display: block;
-    font-size: 24px;
-    margin-bottom: 16px;
-}
-
-.section__title {
-    position: relative;
-    font-size: 30px;
-    margin: 0px 0px 106px 0px;
-    padding: 0px;
-}
-
-.section__title::after {
-    position: absolute;
-    content: '';
-    width: 60px;
-    height: 3px;
-    background-color: rgb(243, 129, 129);
-    left: 50%;
-    bottom: -42px;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    margin: 0px;
-}
-
-.section__list {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    margin: 0px 0px 96px 0px;
-}
-
-.services__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 380px;
-            flex: 0 0 380px;
-    text-align: left;
-    padding: 0px 10px 0px 80px;
-    background-repeat: no-repeat;
-    background-position: 20px 0;
-    background-size: 32px 32px;
-}
-
-.services__item::before {
-    display: block;
-    content: '';
-}
-
-.services__item:not(:nth-last-of-type(-n+3)) {
-    margin-bottom: 94px;
-}
-
-.services__item--alarm {
-    background-image: url(../img/img-icon/alarm.svg);
-}
-
-.services__item--graph {
-    background-image: url(../img/img-icon/line_graph.svg);
-}
-
-.services__item--computer {
-    background-image: url(../img/img-icon/computer.svg);
-}
-
-.services__item--book {
-    background-image: url(../img/img-icon/book.svg);
-}
-
-.services__item--home {
-    background-image: url(../img/img-icon/home.svg);
-}
-
-.services__item--image {
-    background-image: url(../img/img-icon/image.svg);
-}
-
-.services__title {
-    font-size: 14px;
-    line-height: 1;
-    margin: 0px 0px 12px 0px;
-}
-
-.services__text {
-    font-size: 15px;
-    line-height: 1.6;
-}
-
-
-/* Meet our team */
-
-.section__wrapper section-team--wrapper {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-}
-
-.section__title {
-    margin-bottom: 84px;
-}
-
-.section__text {
-    width: 954px;
-    font-size: 15px;
-    line-height: 1.6;
-    margin-bottom: 90px;
-}
-
-.section__list {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    width: 100%;
-    margin: 0px 0px 82px 0px;
-}
-
-.team__cart {
-    position: relative;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 28px;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.team__wrapper {
-    background: rgb(149, 225, 211);
-}
-
-.team__list {
-    position: absolute;
-    width: 380px;
-    height: 470px;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, 0.9)), to(rgba(243, 129, 129, 0.9)));
-    background: -o-linear-gradient(bottom, rgba(252, 227, 138, 0.9), rgba(243, 129, 129, 0.9));
-    background: linear-gradient(0deg, rgba(252, 227, 138, 0.9), rgba(243, 129, 129, 0.9));
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.team__item {
-    list-style: none;
-    background-color: rgb(252, 227, 138);
-}
-
-.team__item:not(:nth-of-type(4n)) {
-    margin-right: 1px;
-}
-
-.team__link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 56px;
-    height: 56px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    fill: #f38181;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-}
-
-.team__icon {
-    width: 26px;
-    height: 26px;
-}
-
-.team__link:hover,
-.team__link:focus {
-    fill: rgb(255, 255, 255);
-}
-
-
-.section__item:hover .team__cart,
-.section__item:focus .team__cart {
-    bottom: 10px;
-    right: 10px;
-}
-
-.team__cart:hover .team__list,
-.team__cart:focus .team__list {
-    opacity: 1;
-}
-
-.team__link:hover,
-.team__link:focus {
-    background-color: rgb(243, 129, 129);
-}
-
-.team__name {
-    font-size: 14px;
-    line-height: 1;
-    margin: 0px 0px 10px 0px;
-}
-
-.team__occupation {
-    line-height: 1.6;
-    margin: 0px;
-}
-
-/* footer */
-
-.footer__wrapper {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    border-top: 1px solid #e5e5e5;
-    padding: 11px 0px;
-}
-
-.footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-}
-
-.footer__text {
-    font-size: 14px;
-    margin: 0px 4px 0px;
-}
-
-.footer__link {
-    font-size: 14px;
-    margin: 0px;
-    cursor: pointer;
-}
-
-.footer__link:hover,
-.footer__link:focus {
-    color: rgb(243, 129, 129);
-}
-
-.footer__field {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    height: 40px;
-}
-
-.footer__input {
-    width: 230px;
-    font-size: 15px;
-    line-height: 1.6;
-    margin: 0px;
-    padding: 12px 0px 10px 12px;
-    border: 1px solid rgb(231, 231, 231);
-    border-right: 0px;
-}
-
-input::-webkit-input-placeholder {
-    color: rgb(204, 204, 204);
-}
-
-.footer__button {
-    font-size: 14px;
-    padding: 12px 34px;
-    border: none;
-}
-
-.btn--light:hover,
-.btn--light:focus {
-    color: #eaf0ef;
-}
-
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: 1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    -webkit-clip-path: inset(100%);
-            clip-path: inset(100%);
-    clip: rect(0, 0, 0, 0);
-    overflow: hidden;
-}
+@import "./common/common.css";
+@import "./header/header.css";
+@import "./logo/site-logo.css";
+@import "./navigation/navigation.css";
+@import "./typography/typography.css";
+@import "./button/button.css";
+@import "./section-services/section-services.css";
+@import "./section-list/section-list.css";
+@import "./section-team/section-team.css";
+@import "./team-list/team-list.css";
+@import "./team-icons/team-icons.css";
+@import "./footer-content/footer-content.css";
+@import "./input-email/input.css";
