--- a/module-10/css/header/header.css
+++ b/module-10/css/header/header.css
@@ -16,9 +16,9 @@
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
     .header {
-        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), url('../../img/bgr@2x.png') no-repeat;
-        background-image: -o-linear-gradient(bottom, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../../img/bgr@2x.png') no-repeat;
-        background-image: linear-gradient(0deg, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../../img/bgr@2x.png') no-repeat;
+        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), url('../../img/bgr@2x.png');
+        background-image: -o-linear-gradient(bottom, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../../img/bgr@2x.png');
+        background-image: linear-gradient(0deg, rgba(252, 227, 138, .9), rgba(243, 129, 129, .9)), url('../../img/bgr@2x.png');
     }
 }
 
