way of icons was changed

--- a/module-11/src/sass/components/services-list.scss
+++ b/module-11/src/sass/components/services-list.scss
@@ -25,27 +25,27 @@
   }
 
   &--alarm {
-    background-image: url(../../images/sprite/alarm.svg);
+    background-image: url(../images/sprite/alarm.svg);
   }
 
   &--graph {
-    background-image: url(../../images/sprite/line_graph.svg);
+    background-image: url(../images/sprite/line_graph.svg);
   }
 
   &--computer {
-    background-image: url(../../images/sprite/computer.svg);
+    background-image: url(../images/sprite/computer.svg);
   }
 
   &--book {
-    background-image: url(../../images/sprite/book.svg);
+    background-image: url(../images/sprite/book.svg);
   }
 
   &--home {
-    background-image: url(../../images/sprite/home.svg);
+    background-image: url(../images/sprite/home.svg);
   }
 
   &--image {
-    background-image: url(../../images/sprite/image.svg);
+    background-image: url(../images/sprite/image.svg);
   }
 }
 
