--- a/module-11/src/sass/components/header.scss
+++ b/module-11/src/sass/components/header.scss
@@ -1,14 +1,15 @@
 .header {
   display: flex;
   min-height: 1000px;
-  background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../../images/bgr.png');
+  background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../images/bgr.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 
-  @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  @media (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
     .header {
-      background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../../images/bgr@2x.png');
+      background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../images/bgr@2x.png');
     }
   }
 }
