Rud structure html is ready

--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -3,6 +3,8 @@ $font-family-monts: 'Montserrat', sans-serif;
 $main-font-roboto: 'Roboto', sans-serif;
 $main-font-kaushanscr: 'Kaushan Script', sans-serif;
 
+// font-family: 'Montserrat', sans-serif;
+
 $font-weight-bold: 700;
 $font-weight-regular: 400;
 $font-weight-light: 300;
