--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -1,38 +1,38 @@
 .header {
   display: flex;
-  min-height: 1000px;
-  background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../images/bgr.png');
+  min-height: 640px;
+  // background-image: url('../../images/bgr-01.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  // background-position: top;
 
-  @media (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-    .header {
-      background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../images/bgr@2x.png');
-    }
-  }
+  // @media (min-resolution: 192dpi),
+  // (min-resolution: 2dppx) {
+  //   .header {
+  //     background-image: linear-gradient(0deg, $ligth-gradient-color, $dark-gradient-color), url('../images/bgr@2x.png');
+  //   }
+  // }
 }
 
-.header__navigation {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 26px;
-  margin-bottom: 174px;
-}
+// .header__navigation {
+//   display: flex;
+//   justify-content: space-between;
+//   padding-top: 26px;
+//   margin-bottom: 174px;
+// }
 
-.header__content {
-  padding: 0px 190px;
-  margin-bottom: 230px;
-}
+// .header__content {
+//   padding: 0px 190px;
+//   margin-bottom: 230px;
+// }
 
-.header__slogan {
-  display: block;
-  font-size: 72px;
-  margin-bottom: 22px;
-}
+// .header__slogan {
+//   display: block;
+//   font-size: 72px;
+//   margin-bottom: 22px;
+// }
 
-.header__title {
-  @include font-settings(150px, 1);
-  margin: 0px 0px 98px;
-}
+// .header__title {
+//   @include font-settings(150px, 1);
+//   margin: 0px 0px 98px;
+// }
