--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -1,36 +1,49 @@
-$main-font-stack:'Roboto', 'Montserrat', 'Kaushan Script', sans-serif;
+$main-font-stack: 'Montserrat', 'Tachoma', sans-serif;
 $font-family-monts: 'Montserrat', sans-serif;
-$main-font-roboto: 'Roboto', sans-serif;
-$main-font-kaushanscr: 'Kaushan Script', sans-serif;
+// $main-font-roboto: 'Roboto', sans-serif;
+
 
 // font-family: 'Montserrat', sans-serif;
 
+
+$font-weight-extrabold: 800;
 $font-weight-bold: 700;
+$font-weight-semibold: 600;
+$font-weight-medium: 500;
 $font-weight-regular: 400;
-$font-weight-light: 300;
 
-$font-style-italic: italic;
 
-$primary-text-size: 15px;
-$secondary-font-size: 14px;
+// $font-weight-light: 300;
+
+// $font-style-italic: italic;
+
+
+$primary-text-size: 11px;
+$secondary-text-size: 13px;
+$primary-font-size: 15px;
+$secondary-font-size: 20px;
+
 $main-text-height: 1.2;
+$primary-text-height: 1.5;
+$secondary-text-height: 1.8;
 
-$primary-white-color: rgb(255, 255, 255);
-$primary-yelow-color: rgb(252, 227, 138);
-$primary-red-color: rgb(243, 129, 129);
-$primary-grey-color: rgb(153, 153, 153);
-$primary-dark-color: rgb(51, 51, 51);
+$primary-white-color: #ffffff;
+$primary-lightgrey-color: #b9b9b9;
+$primary-grey-color: #858585;
+$primary-dark-color: #18191d;
+$primary-orange-color: #ff6b08;
 
-$background-light-color: rgb(149, 225, 211);
-$background-lighter-color: rgba(0, 0, 0, 0);
 
-$border-light-color: rgb(229, 229, 229);
+// $background-light-color: rgb(149, 225, 211);
+// $background-lighter-color: rgba(0, 0, 0, 0);
 
-$button-light-color: rgb(255, 255, 255);
-$button-accent-color: rgb(234, 240, 239);
+// $border-light-color: rgb(229, 229, 229);
 
-$input-text-color: rgb(204, 204, 204);
-$input-border-color: rgb(231, 231, 231);
+// $button-light-color: rgb(255, 255, 255);
+// $button-accent-color: rgb(234, 240, 239);
 
-$ligth-gradient-color: rgba(252, 227, 138, 0.9);
-$dark-gradient-color: rgba(243, 129, 129, 0.9);
+// $input-text-color: rgb(204, 204, 204);
+// $input-border-color: rgb(231, 231, 231);
+
+// $ligth-gradient-color: rgba(252, 227, 138, 0.9);
+// $dark-gradient-color: rgba(243, 129, 129, 0.9);
