--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -1,19 +1,20 @@
 @import 'normalize.scss';
-// @import 'helpers/variables';
-// @import 'helpers/placeholders';
+@import 'helpers/variables';
+@import 'helpers/placeholders';
 // @import 'helpers/mixins';
-// @import 'helpers/extras';
-// @import 'helpers/typography';
+@import 'helpers/extras';
+@import 'helpers/typography';
 @import 'base.scss';
 
 // components
 // @import 'components/button';
-// @import 'components/container';
-// @import 'components/wrapper';
-// @import 'components/header';
-// @import 'components/navigation';
-// @import 'components/site-logo';
-// @import 'components/menu';
+@import 'components/burger';
+@import 'components/container';
+@import 'components/wrapper';
+@import 'components/header';
+@import 'components/navigation';
+@import 'components/logo';
+@import 'components/menu';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
