--- a/project-01/src/sass/helpers/typography.scss
+++ b/project-01/src/sass/helpers/typography.scss
@@ -23,11 +23,11 @@
   font-weight: $font-weight-regular;
 }
 
-// .typographic-mb {
-//   font-family: $font-family-monts;
-//   font-weight: $font-weight-bold;
-//   text-align: center;
-// }
+.typographic-tb {
+  font-family: $main-font-tahoma;
+  font-weight: $font-weight-bold;
+  text-align: center;
+}
 
 // .typographic-rr {
 //   font-family: $main-font-roboto;
