--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -7,7 +7,7 @@
 @import 'base.scss';
 
 // components
-// @import 'components/button';
+@import 'components/button';
 @import 'components/burger';
 @import 'components/container';
 @import 'components/wrapper';
@@ -15,6 +15,7 @@
 @import 'components/navigation';
 @import 'components/logo';
 @import 'components/menu';
+@import 'components/section-training';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
