--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -1,37 +1,40 @@
-.header--button {
-  font-size: $secondary-font-size;
-  padding: 10px 28px;
-  transition: all 0.2s linear;
+.section-training__button {
+  font-size: 11px;
+  color: rgb(255, 255, 255);
+  line-height: 10;
+  // padding: 10px 28px;
+  margin-bottom: 36px;
 }
 
-.footer--button {
-  font-size: $secondary-font-size;
-  padding: 12px 34px;
-  border: none;
-}
+// .footer--button {
+//   font-size: $secondary-font-size;
+//   padding: 12px 34px;
+//   border: none;
+// }
 
 .button {
   @extend %button;
 
   &--light {
     color: $primary-white-color;
-    background-color: $background-light-color;
+    background-color: $primary-orange-color;
 
     &:hover,
     &:focus {
       color: $button-accent-color;
+      background-color: $primary-orange-color;
     }
   }
 
-  &--lighter {
-    color: $primary-white-color;
-    background-color: $background-lighter-color;
-    border: 3px solid $primary-white-color;
+  // &--lighter {
+  //   color: $primary-white-color;
+  //   background-color: $background-lighter-color;
+  //   border: 3px solid $primary-white-color;
 
-    &:hover,
-    &:hover {
-      color: $primary-yelow-color;
-      border-color: $primary-yelow-color;
-    }
-  }
+  //   &:hover,
+  //   &:hover {
+  //     color: $primary-yelow-color;
+  //     border-color: $primary-yelow-color;
+  //   }
+  // }
 }
