--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -1,10 +1,7 @@
 .header {
   display: flex;
-  min-height: 640px;
-  // background-image: url('../../images/bgr-01.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  // background-position: top;
+
+  background-color: rgb(169, 245, 169);
 
   // @media (min-resolution: 192dpi),
   // (min-resolution: 2dppx) {
@@ -14,12 +11,22 @@
   // }
 }
 
-// .header__navigation {
-//   display: flex;
-//   justify-content: space-between;
-//   padding-top: 26px;
-//   margin-bottom: 174px;
-// }
+.header__wrapper {
+  min-height: 640px;
+  background-image: url('../../images/bgr-01.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header__navigation {
+  margin-bottom: 52px;
+  padding: 26px 0px 0px;
+}
+
+.header__section-training {
+  margin-bottom: 30px;
+}
 
 // .header__content {
 //   padding: 0px 190px;
