--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -1,6 +1,6 @@
-$main-font-stack: 'Montserrat', 'Tachoma', sans-serif;
+$main-font-stack: 'Montserrat', 'Tahoma', sans-serif;
 $font-family-monts: 'Montserrat', sans-serif;
-// $main-font-roboto: 'Roboto', sans-serif;
+$main-font-tahoma: 'Tahoma', sans-serif;
 
 
 // font-family: 'Montserrat', sans-serif;
@@ -24,7 +24,8 @@ $primary-font-size: 15px;
 $secondary-font-size: 20px;
 
 $main-text-height: 1.2;
-$primary-text-height: 1.5;
+$primary-text-height: 1.35;
+$primary-font-height: 1.5;
 $secondary-text-height: 1.8;
 
 $primary-white-color: #ffffff;
