--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -16,11 +16,14 @@
 @import 'components/logo';
 @import 'components/menu';
 @import 'components/section-training';
+@import 'components/section-icons.scss';
+@import 'components/menu-icons';
+@import 'components/section-problem.scss';
+@import 'components/menu-problem.scss';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
 // @import 'components/section-team';
 // @import 'components/team-list';
-// @import 'components/menu-icons';
 // @import 'components/footer-content';
 // @import 'components/field';
