--- a/project-01/src/sass/helpers/placeholders.scss
+++ b/project-01/src/sass/helpers/placeholders.scss
@@ -7,20 +7,22 @@
   transition: all 0.2s linear;
 }
 
+%list {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
 %link {
   text-decoration: none;
   transition: all 0.2s linear;
 }
 
-// %list {
-//   padding: 0px;
-//   list-style: none;
-// }
+%item {
+  cursor: pointer;
+}
 
-// %item {
-//   cursor: pointer;
-// }
-
-// %icon {
-//   display: block;
-// }
+%icon {
+  display: block;
+  width: 100%;
+}
