--- a/project-01/src/sass/base.scss
+++ b/project-01/src/sass/base.scss
@@ -13,6 +13,7 @@ body {
   line-height: $main-text-height;
   font-family: $main-font-stack;
   color: $primary-grey-color;
+  // counter-reset: count-problem count-block;
   margin: 0px;
   padding: 0px;
 }
@@ -22,6 +23,7 @@ body {
   width: 100%;
   height: auto;
 }
+
 
 * {
   outline: 1px solid red;
