--- a/project-01/src/sass/components/container.scss
+++ b/project-01/src/sass/components/container.scss
@@ -1,6 +1,6 @@
 .container {
   width: 320px;
   margin: 0px auto;
-  text-align: center;
-  padding: 0px 20px;
+  // text-align: center;
+  // padding: 0px 20px;
 }
