--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -1,11 +1,24 @@
 .section-problem {
-  margin-bottom: 32px;
+  display: flex;
+  min-height: 676px;
+}
+
+.section-problem__wrapper {
+  height: 518px;
+  background: #111517;
+  padding: 48px 20px 0px;
+  //   margin-bottom: 30px;
 }
 
 .section-problem__title {
+  width: 240px;
   font-size: 20px;
-  font-family: "Montserrat";
   color: rgb(255, 255, 255);
-  font-weight: bold;
   line-height: 1.5;
+  text-align: left;
+  margin: 0px 0px 18px 0px;
 }
+
+// .section-problem__menu-problem {
+//   margin-bottom: 30px;
+// }
