--- a/project-01/src/sass/helpers/typography.scss
+++ b/project-01/src/sass/helpers/typography.scss
@@ -45,6 +45,10 @@
   color: $primary-dark-color;
 }
 
+.text-lightdark {
+  color: $secondary-dark-color;
+}
+
 // .text-orange {
 //   color: $primary-orange-color;
 // }
