--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -32,6 +32,7 @@ $primary-white-color: #ffffff;
 $primary-lightgrey-color: #b9b9b9;
 $primary-grey-color: #858585;
 $primary-dark-color: #18191d;
+$secondary-dark-color: #111517;
 $primary-orange-color: #ff6b08;
 
 
