--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -16,10 +16,12 @@
 @import 'components/logo';
 @import 'components/menu';
 @import 'components/section-training';
-@import 'components/section-icons.scss';
+@import 'components/section-icons';
 @import 'components/menu-icons';
-@import 'components/section-problem.scss';
-@import 'components/menu-problem.scss';
+@import 'components/section-problem';
+@import 'components/menu-problem';
+@import 'components/section-action';
+@import 'components/actions';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
