--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -21,7 +21,7 @@
 @import 'components/section-problem';
 @import 'components/menu-problem';
 @import 'components/section-action';
-@import 'components/actions';
+@import 'components/menu-actions';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
