--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -17,11 +17,13 @@
 @import 'components/menu';
 @import 'components/section-training';
 @import 'components/section-icons';
+@import 'components/section-program';
 @import 'components/menu-icons';
 @import 'components/section-problem';
 @import 'components/menu-problem';
 @import 'components/section-action';
 @import 'components/menu-actions';
+@import 'components/list-program';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
