--- a/project-01/src/sass/components/section-program.scss
+++ b/project-01/src/sass/components/section-program.scss
@@ -1,12 +1,31 @@
-.section-program{
-
+.section-program {
+  display: flex;
+  position: relative;
 }
 
-.section-program__wrapper{
-
+.section-program__wrapper {
+  display: flex;
+  flex-direction: column;
+  background: #111517;
 }
 
-.section-program__list{
-
+.section-program__title {
+  font-size: 20px;
+  line-height: 1.65;
+  padding-top: 46px;
+  margin: 0px 0px 30px 0px;
+  text-align: center;
 }
 
+.section-program__list {
+  margin-bottom: 114px;
+}
+
+.section-program__img {
+  width: 142px;
+  height: 169px;
+  background-image: url(../../images/pic.png);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
