--- a/project-01/src/sass/components/section-program.scss
+++ b/project-01/src/sass/components/section-program.scss
@@ -18,7 +18,7 @@
 }
 
 .section-program__list {
-  margin-bottom: 114px;
+  margin-bottom: 36px;
 }
 
 .section-program__img {
@@ -26,6 +26,6 @@
   height: 169px;
   background-image: url(../../images/pic.png);
   position: absolute;
-  bottom: 0;
-  right: 0;
+  right: 0px;
+  bottom: -90px;
 }
