--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -24,6 +24,9 @@
 @import 'components/section-action';
 @import 'components/menu-actions';
 @import 'components/list-program';
+@import 'components/section-choosing';
+@import 'components/section-teacher';
+@import 'components/card';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
