--- a/project-01/src/sass/components/menu-icons.scss
+++ b/project-01/src/sass/components/menu-icons.scss
@@ -26,9 +26,13 @@
   align-items: center;
   width: 58px;
   height: 58px;
-  // width: 36px;
-  // height: 36px;
   border: 2px solid #ff6b08;
+  // width: 36px;
+  // // height: 36px;
+  // background-image: url(../../images/icons-svg/icon_check.svg);
+  // background-repeat: no-repeat;
+  // background-size: 36px 36px;
+  // background-position: center;
   position: relative;
   margin: 0px 14px 0px 50px;
 
