--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -18,8 +18,8 @@
   text-align: left;
   margin: 0px 0px 16px 0px;
   padding: 0px 40px 0px 0px;
-}
 
-.section-problem__colortext {
-  color: #ff6b08;
+  &--colortext {
+    color: #ff6b08;
+  }
 }
