--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -27,6 +27,8 @@
 @import 'components/section-choosing';
 @import 'components/section-teacher';
 @import 'components/card';
+@import 'components/section-warranty';
+@import 'components/list-warranty';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
