--- a/project-01/src/sass/components/card.scss
+++ b/project-01/src/sass/components/card.scss
@@ -1,12 +1,12 @@
-.card {}
+.card {
+  display: flex;
+  flex-direction: column;
+}
 
 .card__img {
   width: 280px;
   height: 214px;
-
 }
-
-.card__content {}
 
 .card__title {
   font-size: 16px;
@@ -35,17 +35,15 @@
     position: absolute;
     width: 16px;
     height: 12px;
-    background-color: rgb(243, 175, 175);
-    // background-image: url(../../images/icons-svg/symbol-defs.svg#icon-check);
-    background-image: url(../../images/icons-svg/check.svg);
-    top: 0px;
+    background-image: url(../../images/icons-svg/icon_check.svg);
     left: -34px;
-    fill: #ffffff;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-}
 
-.card__item:not(:nth-last-of-type(-3n+1)) {
-  margin-bottom: 20px;
+  &:not(:nth-last-of-type(-3n+1)) {
+    margin-bottom: 20px;
+  }
 }
 
 .card__description {
@@ -58,22 +56,33 @@
 
 .card__text {
   font-size: 11px;
-  //   color: rgb(133, 133, 133);
   line-height: 1.818;
   margin: 0px;
   padding: 0px 16px;
+  position: relative;
 
+  &::before {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    background-color: #ff6b08;
+    top: -20px;
+  }
 }
 
 .card__link {
-  display: inline-block;
+  display: block;
   font-size: 11px;
-  font-family: "Montserrat";
-  color: rgb(255, 107, 8);
+  color: #ff6b08;
   text-decoration: underline;
   line-height: 2.652;
   margin: 0px;
   padding-left: 16px;
+  @extend %item;
 
-
+  &:hover {
+    color: #8c491d;
+  }
 }
